--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <h5>Nama: </h5>
 <b>{{nama}}</b>
-
 <table>
+    <style>
+        table, th, td {
+            border: 1px solid white;
+            border-collapse: collapse;
+          }
+          th, td {
+            background-color: #96D4D4;
+          }
+    </style>
     <tr>
     <th>Nama Barang</th>
     <th>Harga Barang</th>
