tambah bootstrap dan styling

--- a/wishlist/templates/register.html
+++ b/wishlist/templates/register.html
@@ -6,6 +6,29 @@
 
 {% block content %}  
 
+<style>
+    /* title, h5, th, td, table {text-align: center;} */
+    table, th, td {
+        border-collapse: collapse;
+        background-color: rgb(251, 221, 238);
+        border-width: 1px;
+        padding: 20px;
+        border-radius: 10px;
+      }
+    * {
+        font-family: 'Arial';
+        /* text-align: center; */
+        vertical-align: middle;
+    }
+    th, td {
+        padding: 10px 14px
+    }
+    /* table {
+    margin-left: auto;
+    margin-right: auto;
+    } */
+  </style>
+  
 <div class = "login">
     
     <h1>Formulir Registrasi</h1>  
