--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -2,8 +2,58 @@
 
 {% block content %}
 
-<h5>Nama: </h5>
-<b>{{nama}}</b>
+<style>
+    h5 {text-align: center;}
+    table, th, td {
+        border: 3px solid black;
+        border-collapse: collapse;
+        background-color: rgb(251, 221, 238);
+        border-width: 1px;
+        padding: 20px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    * {
+        font-family: 'Arial';
+        text-align: center;
+        vertical-align: middle;
+    }
+    th, td {
+        padding: 10px 14px
+    }
+  </style>
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  </body>
+</html>
+
+
+  <nav class="navbar navbar-expand-lg" style="background-color: rgb(170, 177, 169)">
+    <div class="container-fluid ml-auto">
+      <a class="navbar-brand" href="#">{{nama}}</a>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-dark btn-sm"> <a class="nav-link active" aria-current="page" href="{% url 'wishlist:logout' %}">logout</a>  </button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<br>
+<h1>Selamat datang di wishlist!</h1>
+<br>
+
 <table>
     <tr>
     <th>Nama Barang</th>
@@ -19,9 +69,8 @@
     </tr>
     {% endfor %}
 </table>
-
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-
-<button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
-
+<br>
+<br>
+<h5 style="font-size:16px" >Sesi terakhir login: {{ last_login }}</h5>
+<!-- <button><a href="{% url 'wishlist:logout' %}">Logout</a></button> -->
 {% endblock content %}
